hw3 is done